# airflow-indexima

./: .cookiecutter.yaml  .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  setup.cfg
airflow_indexima/: __init__.py  connection.py  hive_transport.py  hook.py  indexima.py  operator.py
airflow_indexima/hooks/: indexima.py
airflow_indexima/operators/: indexima.py
airflow_indexima/sample_package/: __init__.py
airflow_indexima/uri/: __init__.py  base.py  factory.py  jdbc.py  redshift.py
docs/: .buildinfo  404.html  api.html  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: api.doctree  changelog.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree
docs/CHANGELOG/: index.html
docs/CODE_OF_CONDUCT/: index.html
docs/CONTRIBUTING/: index.html
docs/LICENSE/: index.html
docs/_modules/: index.html  typing.html
docs/_sources/: api.rst.txt
docs/airflow_indexima.connection/: index.html
docs/airflow_indexima.hive_transport/: index.html
docs/airflow_indexima.hooks.indexima/: index.html
docs/airflow_indexima.operators.indexima/: index.html
docs/airflow_indexima.uri/: index.html
docs/airflow_indexima.uri.factory/: index.html
docs/airflow_indexima.uri.jdbc/: index.html
docs/api/: index.html
docs/api-overview/: index.html
docs/changelog/: index.html
docs/code_of_conduct/: index.html
docs/contributing/: index.html
docs/documentation/: index.html
docs/license/: index.html
docs/search/: search_index.json
mkdocs/: mkdocs.yml
mkdocs/docs/: api-overview.md  contributing.md  documentation.md
sphinx/: api.rst  conf.py  index.rst
sphinx/api/: airflow_indexima.connection.rst  airflow_indexima.hive_transport.rst  airflow_indexima.hooks.rst  (+9 more)
tests/: conftest.py  test_connection.py  test_hive_transport.py  test_indexima_hook.py  test_load_path_operator.py  test_operators.py  test_query_runner_operator.py  test_uri_factory.py  test_uri_jdbc.py  test_version.py
tools/: md_autogen.py  update_docs.py
workspace/: api.rst  api.txt
(+13 files in other folders)
